--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Doodle Jump</string>
+    <string name="stop">Stop</string>
+    <string name="start_game">Start Game</string>
+    <string name="about_us">About us</string>
 </resources>
