--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">Doodle Jump</string>
+    <string name="app_name" translatable="false">Doodle Jump</string>
     <string name="stop">Stop</string>
     <string name="start_game">Start Game</string>
     <string name="about_us">About us</string>
+    <string name="created_by">Created by</string>
+    <string name="creators" translatable="false">Anthony Peeters &amp; Marco Havermans</string>
 </resources>
