--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="created_by">Created by</string>
     <string name="creators" translatable="false">Anthony Peeters &amp; Marco Havermans</string>
     <string name="play_again">Play again</string>
-    <string name="score">Score:</string>
+    <string name="score" translatable="false">Score:</string>
+    <string name="main_menu">Main Menu</string>
 </resources>
