--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="play_again">Play again</string>
     <string name="score" translatable="false">Score:</string>
     <string name="main_menu">Main Menu</string>
+    <string name="player_name_hint">Name</string>
+    <string name="enter_your_name_label">Enter your name...</string>
 </resources>
