--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="main_menu">Main Menu</string>
     <string name="player_name_hint">Name</string>
     <string name="enter_your_name_label">Enter your name...</string>
+    <string name="back">Back</string>
+    <string name="scoreboard">Scoreboard</string>
 </resources>
