--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,12 @@
     <string name="created_by">Created by</string>
     <string name="creators" translatable="false">Anthony Peeters &amp; Marco Havermans</string>
     <string name="play_again">Play again</string>
-    <string name="score" translatable="false">Score:</string>
+    <string name="score_label">Score:</string>
     <string name="main_menu">Main Menu</string>
     <string name="player_name_hint">Name</string>
-    <string name="enter_your_name_label">Enter your name...</string>
+    <string name="enter_your_name_label">Enter your name…</string>
     <string name="back">Back</string>
     <string name="scoreboard">Scoreboard</string>
+    <string name="enter_name">Please enter a name…</string>
+    <string name="name_in_use">Name already in use…</string>
 </resources>
